--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "honoka-api",
+  "version": "0.1.0",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify"
